# zero2prod2

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20250403130902_create_subscriptions_table.sql  20250413194915_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
