[package]
name = "zero2prod2"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.10.2" }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
claims = "0.8.0"
config = { version = "0.15.11" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
fake = "4.3.0"
reqwest = { version = "0.12.15" }
quickcheck_macros = "1"
rand = "0.9.0"
quickcheck = "1.0.3"
